--- a/clase_p_3.ipynb
+++ b/clase_p_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "5ba5e3d8",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
        "[1 rows x 23 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,6 +868,393 @@
     "llnull = res_null.llf\n",
     "mcfadden_r2 = 1 - (llf / llnull)\n",
     "print(f\"\\nMcFadden R²: {mcfadden_r2:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c478f098",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Probabilidades estimadas (equivalente a predict e_x)\n",
+    "df['e_x'] = res.predict(Xc)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "cd3e0f32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    4642.000000\n",
+      "mean        0.186127\n",
+      "std         0.120076\n",
+      "min         0.056145\n",
+      "25%         0.100099\n",
+      "50%         0.133185\n",
+      "75%         0.249509\n",
+      "max         0.836854\n",
+      "Name: e_x, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "summary = df['e_x'].describe()\n",
+    "print(summary)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "00048044",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal trimming: 0.0700  |  Avg SMD: 0.1090  |  N=3437\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "def standardized_mean_diff(x_treated, x_control):\n",
+    "    \"\"\"Calcula el Standardized Mean Difference entre dos grupos.\"\"\"\n",
+    "    mean_t = np.nanmean(x_treated)\n",
+    "    mean_c = np.nanmean(x_control)\n",
+    "    var_pooled = (np.nanvar(x_treated, ddof=1) + np.nanvar(x_control, ddof=1)) / 2\n",
+    "    return abs(mean_t - mean_c) / np.sqrt(var_pooled)\n",
+    "\n",
+    "def optselect(df, treat_col, e_col, covariates, trims=np.arange(0, 0.11, 0.01)):\n",
+    "    results = []\n",
+    "\n",
+    "    for trim in trims:\n",
+    "        # rango común (elimina extremos)\n",
+    "        treated = df.loc[df[treat_col] == 1, e_col]\n",
+    "        control = df.loc[df[treat_col] == 0, e_col]\n",
+    "        lower = max(treated.quantile(trim), control.quantile(trim))\n",
+    "        upper = min(treated.quantile(1 - trim), control.quantile(1 - trim))\n",
+    "        trimmed = df[(df[e_col] >= lower) & (df[e_col] <= upper)]\n",
+    "\n",
+    "        smds = []\n",
+    "        for cov in covariates:\n",
+    "            x_t = trimmed.loc[trimmed[treat_col] == 1, cov]\n",
+    "            x_c = trimmed.loc[trimmed[treat_col] == 0, cov]\n",
+    "            smd = standardized_mean_diff(x_t, x_c)\n",
+    "            smds.append(smd)\n",
+    "        mean_smd = np.mean(smds)\n",
+    "        results.append({\"trim\": trim, \"mean_smd\": mean_smd, \"n_obs\": len(trimmed)})\n",
+    "\n",
+    "    out = pd.DataFrame(results).sort_values(\"mean_smd\")\n",
+    "    best = out.iloc[0]\n",
+    "    print(f\"Optimal trimming: {best.trim:.4f}  |  Avg SMD: {best.mean_smd:.4f}  |  N={int(best.n_obs)}\")\n",
+    "\n",
+    "    return out, best\n",
+    "\n",
+    "# ============================\n",
+    "# Ejemplo con tus datos\n",
+    "# ============================\n",
+    "covariates = ['mmarried', 'alcohol', 'monthslb', 'nprenatal', 'deadkids', 'prenatal', 'fbaby']\n",
+    "out, best = optselect(df, treat_col='mbsmoke', e_col='e_x', covariates=covariates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "96ddf3ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.438036\n",
+      "         Iterations 6\n",
+      "                           Logit Regression Results                           \n",
+      "==============================================================================\n",
+      "Dep. Variable:                mbsmoke   No. Observations:                 4642\n",
+      "Model:                          Logit   Df Residuals:                     4631\n",
+      "Method:                           MLE   Df Model:                           10\n",
+      "Date:                Tue, 11 Nov 2025   Pseudo R-squ.:                 0.08848\n",
+      "Time:                        20:42:43   Log-Likelihood:                -2033.4\n",
+      "converged:                       True   LL-Null:                       -2230.7\n",
+      "Covariance Type:            nonrobust   LLR p-value:                 1.218e-78\n",
+      "=====================================================================================\n",
+      "                        coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "-------------------------------------------------------------------------------------\n",
+      "const                -0.9344      0.214     -4.375      0.000      -1.353      -0.516\n",
+      "mmarried             -1.7080      0.204     -8.389      0.000      -2.107      -1.309\n",
+      "alcohol               1.4448      0.179      8.082      0.000       1.094       1.795\n",
+      "monthslb              0.0118      0.004      3.211      0.001       0.005       0.019\n",
+      "nprenatal            -0.0246      0.011     -2.224      0.026      -0.046      -0.003\n",
+      "deadkids              0.2563      0.088      2.919      0.004       0.084       0.428\n",
+      "prenatal              0.1000      0.101      0.986      0.324      -0.099       0.299\n",
+      "fbaby                 0.2810      0.229      1.225      0.221      -0.169       0.731\n",
+      "mmarried_prenatal     0.4413      0.145      3.040      0.002       0.157       0.726\n",
+      "monthslb_sq       -4.551e-05   2.21e-05     -2.056      0.040   -8.89e-05   -2.12e-06\n",
+      "fbaby_prenatal       -0.2627      0.146     -1.800      0.072      -0.549       0.023\n",
+      "=====================================================================================\n",
+      "\n",
+      "=== Summary e_x (predict) ===\n",
+      "count    4642.000000\n",
+      "mean        0.186127\n",
+      "std         0.120076\n",
+      "min         0.056145\n",
+      "25%         0.100099\n",
+      "50%         0.133185\n",
+      "75%         0.249509\n",
+      "max         0.836854\n",
+      "Name: e_x, dtype: float64\n",
+      "\n",
+      "Optimal bound = 0.000000000000000\n",
+      "Overlap interval: [0.074033, 0.802315]\n",
+      "N total         = 4642\n",
+      "N después trim  = 4617\n",
+      "\n",
+      "=== Balance (SMD) — Antes del trimming ===\n",
+      "         var     mean_t     mean_c       SMD\n",
+      "0   mmarried   0.473380   0.751456  0.595301\n",
+      "1    alcohol   0.091435   0.018793  0.322273\n",
+      "3  nprenatal   9.862269  10.962943  0.283799\n",
+      "5   prenatal   1.307870   1.177607  0.233992\n",
+      "2   monthslb  28.219907  21.898359  0.184197\n",
+      "6      fbaby   0.371528   0.453150  0.166327\n",
+      "4   deadkids   0.318287   0.245897  0.161322\n",
+      "\n",
+      "=== Balance (SMD) — Después del trimming ===\n",
+      "         var     mean_t     mean_c       SMD\n",
+      "0   mmarried   0.475029   0.750000  0.588103\n",
+      "1    alcohol   0.088269   0.018903  0.311586\n",
+      "3  nprenatal   9.880372  10.917732  0.270549\n",
+      "5   prenatal   1.304297   1.179446  0.224822\n",
+      "2   monthslb  27.940767  22.024228  0.172988\n",
+      "6      fbaby   0.372822   0.451544  0.160387\n",
+      "4   deadkids   0.317073   0.247338  0.155352\n",
+      "\n",
+      "Avg SMD (antes):  0.2782\n",
+      "Avg SMD (después):0.2691\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -*- coding: utf-8 -*-\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# ============================================\n",
+    "# 1) LOGIT — igual que: logit mbsmoke $psestimate_var\n",
+    "# ============================================\n",
+    "\n",
+    "y = df['mbsmoke'].astype(int)\n",
+    "\n",
+    "# Variables seleccionadas por psestimate en Stata\n",
+    "X = pd.DataFrame({\n",
+    "    'mmarried':  df['mmarried'],\n",
+    "    'alcohol':   df['alcohol'],\n",
+    "    'monthslb':  df['monthslb'],\n",
+    "    'nprenatal': df['nprenatal'],\n",
+    "    'deadkids':  df['deadkids'],\n",
+    "    'prenatal':  df['prenatal'],\n",
+    "    'fbaby':     df['fbaby'],\n",
+    "})\n",
+    "\n",
+    "# Interacciones de segundo orden según Stata\n",
+    "X['mmarried_prenatal'] = df['mmarried'] * df['prenatal']      # c.prenatal#c.mmarried\n",
+    "X['monthslb_sq']       = df['monthslb'] * df['monthslb']      # c.monthslb#c.monthslb\n",
+    "X['fbaby_prenatal']    = df['fbaby'] * df['prenatal']         # c.fbaby#c.prenatal\n",
+    "\n",
+    "Xc = sm.add_constant(X, has_constant='add')\n",
+    "res = sm.Logit(y, Xc).fit(disp=True)\n",
+    "print(res.summary())\n",
+    "\n",
+    "# ============================================\n",
+    "# 2) predict e_x — igual que: predict e_x\n",
+    "# ============================================\n",
+    "\n",
+    "df['e_x'] = res.predict(Xc)\n",
+    "\n",
+    "print(\"\\n=== Summary e_x (predict) ===\")\n",
+    "print(df['e_x'].describe())\n",
+    "\n",
+    "# ============================================\n",
+    "# 3) optselect e_x — igual que: optselect e_x\n",
+    "#     Calcula el 'optimal bound' según overlap\n",
+    "# ============================================\n",
+    "\n",
+    "def optselect_bound_stata_like(scores_t, scores_c, step=1e-5):\n",
+    "    \"\"\"\n",
+    "    Replica el criterio de optselect: encuentra el bound más pequeño\n",
+    "    que mantiene solapamiento positivo (overlap) entre tratados y controles.\n",
+    "    \"\"\"\n",
+    "    s_t = pd.Series(scores_t)\n",
+    "    s_c = pd.Series(scores_c)\n",
+    "    grid = np.arange(0, 0.20 + step, step)\n",
+    "    for b in grid:\n",
+    "        lower = max(s_t.quantile(b), s_c.quantile(b))\n",
+    "        upper = min(s_t.quantile(1 - b), s_c.quantile(1 - b))\n",
+    "        if upper > lower:\n",
+    "            return b, lower, upper\n",
+    "    return None, None, None\n",
+    "\n",
+    "treated = df.loc[df['mbsmoke'] == 1, 'e_x']\n",
+    "control = df.loc[df['mbsmoke'] == 0, 'e_x']\n",
+    "\n",
+    "b_opt, lower, upper = optselect_bound_stata_like(treated, control)\n",
+    "\n",
+    "print(f\"\\nOptimal bound = {b_opt:.15f}\")\n",
+    "print(f\"Overlap interval: [{lower:.6f}, {upper:.6f}]\")\n",
+    "\n",
+    "# ============================================\n",
+    "# 4) Trimming con el bound óptimo\n",
+    "# ============================================\n",
+    "\n",
+    "df_trim = df[(df['e_x'] >= lower) & (df['e_x'] <= upper)].copy()\n",
+    "print(f\"N total         = {len(df):d}\")\n",
+    "print(f\"N después trim  = {len(df_trim):d}\")\n",
+    "\n",
+    "# ============================================\n",
+    "# 5) Chequeo de balance (SMD)\n",
+    "# ============================================\n",
+    "\n",
+    "covariates = ['mmarried', 'alcohol', 'monthslb', 'nprenatal',\n",
+    "              'deadkids', 'prenatal', 'fbaby']\n",
+    "\n",
+    "def smd_unweighted(df_in, treat_col, covs):\n",
+    "    rows = []\n",
+    "    for c in covs:\n",
+    "        x_t = df_in.loc[df_in[treat_col] == 1, c].astype(float)\n",
+    "        x_c = df_in.loc[df_in[treat_col] == 0, c].astype(float)\n",
+    "        m_t, m_c = x_t.mean(), x_c.mean()\n",
+    "        v_t, v_c = x_t.var(ddof=1), x_c.var(ddof=1)\n",
+    "        smd = abs(m_t - m_c) / np.sqrt((v_t + v_c) / 2) if (v_t + v_c) > 0 else 0.0\n",
+    "        rows.append([c, m_t, m_c, smd])\n",
+    "    out = pd.DataFrame(rows, columns=['var', 'mean_t', 'mean_c', 'SMD'])\n",
+    "    return out.sort_values('SMD', ascending=False)\n",
+    "\n",
+    "print(\"\\n=== Balance (SMD) — Antes del trimming ===\")\n",
+    "smd_before = smd_unweighted(df, 'mbsmoke', covariates)\n",
+    "print(smd_before)\n",
+    "\n",
+    "print(\"\\n=== Balance (SMD) — Después del trimming ===\")\n",
+    "smd_after = smd_unweighted(df_trim, 'mbsmoke', covariates)\n",
+    "print(smd_after)\n",
+    "\n",
+    "print(f\"\\nAvg SMD (antes):  {smd_before['SMD'].mean():.4f}\")\n",
+    "print(f\"Avg SMD (después):{smd_after['SMD'].mean():.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5ed8003e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Optimal bound = 0.057900000000000\n",
+      "Overlap interval: [0.086762, 0.364123]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ============================================\n",
+    "# 3) optselect e_x — versión mejorada\n",
+    "# ============================================\n",
+    "from scipy.stats import ks_2samp\n",
+    "\n",
+    "def optselect_bound(scores_t, scores_c, *,\n",
+    "                    mode=\"overlap\",\n",
+    "                    grid_start=0.0, grid_end=0.20, step=1e-4,\n",
+    "                    min_trim_each_side=1):\n",
+    "    \"\"\"\n",
+    "    Encuentra 'optimal bound' para trimming simétrico en cuantiles.\n",
+    "    - mode=\"overlap\": el menor b que:\n",
+    "        (i) produce overlap positivo y\n",
+    "        (ii) recorta >= min_trim_each_side obs en cada cola de CADA grupo.\n",
+    "      => evita devolver 0.0 cuando hay solapamiento completo pero sin recorte.\n",
+    "    - mode=\"ks\": el b en [grid_start, grid_end] que minimiza KS(treated, control)\n",
+    "      luego de recortar por [max(q_t(b), q_c(b)), min(q_t(1-b), q_c(1-b))].\n",
+    "    \"\"\"\n",
+    "    s_t = pd.Series(scores_t).sort_values().reset_index(drop=True)\n",
+    "    s_c = pd.Series(scores_c).sort_values().reset_index(drop=True)\n",
+    "    n_t, n_c = len(s_t), len(s_c)\n",
+    "\n",
+    "    grid = np.arange(grid_start, grid_end + step, step)\n",
+    "\n",
+    "    if mode == \"overlap\":\n",
+    "        for b in grid:\n",
+    "            lt = int(np.floor(b * n_t))           # recortados en cola izq. tratados\n",
+    "            lc = int(np.floor(b * n_c))           # recortados en cola izq. controles\n",
+    "            rt = int(np.floor(b * n_t))           # recortados en cola der. tratados\n",
+    "            rc = int(np.floor(b * n_c))           # recortados en cola der. controles\n",
+    "\n",
+    "            lower = max(s_t.quantile(b), s_c.quantile(b))\n",
+    "            upper = min(s_t.quantile(1 - b), s_c.quantile(1 - b))\n",
+    "\n",
+    "            # overlap real y recorte real (ambas colas, ambos grupos)\n",
+    "            if (upper > lower) and (lt >= min_trim_each_side) and (lc >= min_trim_each_side) \\\n",
+    "               and (rt >= min_trim_each_side) and (rc >= min_trim_each_side):\n",
+    "                return float(b), float(lower), float(upper)\n",
+    "        # fallback: al menos overlap (como lo tenías)\n",
+    "        for b in grid:\n",
+    "            lower = max(s_t.quantile(b), s_c.quantile(b))\n",
+    "            upper = min(s_t.quantile(1 - b), s_c.quantile(1 - b))\n",
+    "            if upper > lower:\n",
+    "                return float(b), float(lower), float(upper)\n",
+    "        return None, None, None\n",
+    "\n",
+    "    elif mode == \"ks\":\n",
+    "        best = None\n",
+    "        for b in grid:\n",
+    "            lower = max(s_t.quantile(b), s_c.quantile(b))\n",
+    "            upper = min(s_t.quantile(1 - b), s_c.quantile(1 - b))\n",
+    "            if upper <= lower:\n",
+    "                continue\n",
+    "            # aplicar trimming simétrico por cuantiles\n",
+    "            t_trim = s_t[(s_t >= lower) & (s_t <= upper)]\n",
+    "            c_trim = s_c[(s_c >= lower) & (s_c <= upper)]\n",
+    "            if len(t_trim) < 10 or len(c_trim) < 10:  # evita soluciones degeneradas\n",
+    "                continue\n",
+    "            ks_stat = ks_2samp(t_trim, c_trim, alternative='two-sided', method='auto').statistic\n",
+    "            if (best is None) or (ks_stat < best[0]):\n",
+    "                best = (ks_stat, b, lower, upper)\n",
+    "        if best is None:\n",
+    "            return None, None, None\n",
+    "        _, b, lower, upper = best\n",
+    "        return float(b), float(lower), float(upper)\n",
+    "\n",
+    "    else:\n",
+    "        raise ValueError(\"mode debe ser 'overlap' o 'ks'\")\n",
+    "\n",
+    "# === Llamada (elegí un modo) ===\n",
+    "treated = df.loc[df['mbsmoke'] == 1, 'e_x']\n",
+    "control  = df.loc[df['mbsmoke'] == 0, 'e_x']\n",
+    "\n",
+    "# Opción A: overlap con recorte real (suele dar ~0.05–0.07 si hay colas finitas)\n",
+    "b_opt, lower, upper = optselect_bound(treated, control,\n",
+    "                                      mode=\"overlap\",\n",
+    "                                      grid_start=0.02, grid_end=0.12, step=1e-4,\n",
+    "                                      min_trim_each_side=50)\n",
+    "\n",
+    "# Opción B: minimizar KS (si querés ‘el bound que mejor iguala’ distribuciones)\n",
+    "# b_opt, lower, upper = optselect_bound(treated, control,\n",
+    "#                                       mode=\"ks\",\n",
+    "#                                       grid_start=0.0, grid_end=0.20, step=1e-4)\n",
+    "print(f\"\\nOptimal bound = {b_opt:.15f}\")\n",
+    "print(f\"Overlap interval: [{lower:.6f}, {upper:.6f}]\")\n"
    ]
   }
  ],
