--- a/clase_p_3.ipynb
+++ b/clase_p_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "5ba5e3d8",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,9 @@
        "      <th>mage</th>\n",
        "      <th>medu</th>\n",
        "      <th>fage</th>\n",
-       "      <th>...</th>\n",
+       "      <th>fedu</th>\n",
+       "      <th>nprenatal</th>\n",
+       "      <th>monthslb</th>\n",
        "      <th>order</th>\n",
        "      <th>msmoke</th>\n",
        "      <th>mbsmoke</th>\n",
@@ -48,6 +50,7 @@
        "      <th>lbweight</th>\n",
        "      <th>fbaby</th>\n",
        "      <th>prenatal1</th>\n",
+       "      <th>rowid</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -63,7 +66,9 @@
        "      <td>24</td>\n",
        "      <td>14</td>\n",
        "      <td>28</td>\n",
-       "      <td>...</td>\n",
+       "      <td>16</td>\n",
+       "      <td>10</td>\n",
+       "      <td>30</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -74,26 +79,24 @@
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "   bweight  mmarried  mhisp  fhisp  foreign  alcohol  deadkids  mage  medu  \\\n",
        "0     3459         1      0      0        0        0         0    24    14   \n",
        "\n",
-       "   fage  ...  order  msmoke  mbsmoke  mrace  frace  prenatal  birthmonth  \\\n",
-       "0    28  ...      2       0        0      1      1         1          12   \n",
+       "   fage  fedu  nprenatal  monthslb  order  msmoke  mbsmoke  mrace  frace  \\\n",
+       "0    28    16         10        30      2       0        0      1      1   \n",
        "\n",
-       "   lbweight  fbaby  prenatal1  \n",
-       "0         0    0.0        1.0  \n",
-       "\n",
-       "[1 rows x 23 columns]"
+       "   prenatal  birthmonth  lbweight  fbaby  prenatal1  rowid  \n",
+       "0         1          12         0    0.0        1.0    1.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +104,8 @@
    "source": [
     "import pandas as pd\n",
     "import pyreadstat as st\n",
-    "path = r\"C:\\Users\\HP\\OneDrive\\Escritorio\\David Guzzi\\DiTella\\MEC\\Materias\\2025\\2025 2T\\[MT08-MT13] Microeconometría II\\Clases prácticas\\PS\\PS2-20251111\\cattaneo2.dta\"\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "path = r\"C:\\Users\\HP\\OneDrive\\Escritorio\\David Guzzi\\DiTella\\MEC\\Materias\\2025\\2025 2T\\[MT08-MT13] Microeconometría II\\Clases prácticas\\PS\\PS2-20251111\\base_con_orden.dta\"\n",
     "\n",
     "df, meta = st.read_dta(path)\n",
     "df.head(1)"
@@ -1256,6 +1260,201 @@
     "print(f\"\\nOptimal bound = {b_opt:.15f}\")\n",
     "print(f\"Overlap interval: [{lower:.6f}, {upper:.6f}]\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4b12d569",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N obs usadas en el logit: 4642\n",
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.438036\n",
+      "         Iterations 6\n",
+      "                           Logit Regression Results                           \n",
+      "==============================================================================\n",
+      "Dep. Variable:                mbsmoke   No. Observations:                 4642\n",
+      "Model:                          Logit   Df Residuals:                     4631\n",
+      "Method:                           MLE   Df Model:                           10\n",
+      "Date:                Wed, 12 Nov 2025   Pseudo R-squ.:                 0.08848\n",
+      "Time:                        18:56:53   Log-Likelihood:                -2033.4\n",
+      "converged:                       True   LL-Null:                       -2230.7\n",
+      "Covariance Type:            nonrobust   LLR p-value:                 1.218e-78\n",
+      "=====================================================================================\n",
+      "                        coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "-------------------------------------------------------------------------------------\n",
+      "const                -0.9344      0.214     -4.375      0.000      -1.353      -0.516\n",
+      "mmarried             -1.7080      0.204     -8.389      0.000      -2.107      -1.309\n",
+      "alcohol               1.4448      0.179      8.082      0.000       1.094       1.795\n",
+      "monthslb              0.0118      0.004      3.211      0.001       0.005       0.019\n",
+      "nprenatal            -0.0246      0.011     -2.224      0.026      -0.046      -0.003\n",
+      "deadkids              0.2563      0.088      2.919      0.004       0.084       0.428\n",
+      "prenatal              0.1000      0.101      0.986      0.324      -0.099       0.299\n",
+      "fbaby                 0.2810      0.229      1.225      0.221      -0.169       0.731\n",
+      "mmarried_prenatal     0.4413      0.145      3.040      0.002       0.157       0.726\n",
+      "monthslb_sq       -4.551e-05   2.21e-05     -2.056      0.040   -8.89e-05   -2.12e-06\n",
+      "fbaby_prenatal       -0.2627      0.146     -1.800      0.072      -0.549       0.023\n",
+      "=====================================================================================\n",
+      "\n",
+      "McFadden R²: 0.0885\n",
+      "\n",
+      "Primeras filas de e_x:\n",
+      "   mbsmoke       e_x\n",
+      "0        0  0.115685\n",
+      "1        0  0.362125\n",
+      "2        0  0.103421\n",
+      "3        0  0.119380\n",
+      "4        0  0.084829\n",
+      "\n",
+      "N tratados: 864, N controles: 3778\n",
+      "\n",
+      "=== MUESTRA MATCHEADA ===\n",
+      "N tratados matcheados: 864\n",
+      "N controles matcheados: 864\n",
+      "Shape df_matched: (1728, 11)\n",
+      "\n",
+      "Resumen bweight en muestra matcheada:\n",
+      "count    1728.000000\n",
+      "mean     3243.375579\n",
+      "std       575.774194\n",
+      "min       397.000000\n",
+      "25%      2920.000000\n",
+      "50%      3289.000000\n",
+      "75%      3608.750000\n",
+      "max      5387.000000\n",
+      "Name: bweight, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# =====================================================\n",
+    "# 1) Partimos de df YA NUMÉRICO\n",
+    "# =====================================================\n",
+    "# Supongo que df ya está leído, por ejemplo:\n",
+    "# path = r\"...\\base_sin_categoricas.dta\" o .csv\n",
+    "# df = pd.read_stata(path)  # o read_csv\n",
+    "\n",
+    "# Nos quedamos solo con las columnas que necesitamos\n",
+    "cols = [\n",
+    "    \"mbsmoke\", \"mmarried\", \"alcohol\", \"monthslb\", \"nprenatal\",\n",
+    "    \"deadkids\", \"prenatal\", \"fbaby\", \"bweight\", 'rowid'\n",
+    "]\n",
+    "\n",
+    "df2 = df[cols].copy()\n",
+    "\n",
+    "# Por las dudas, aseguramos tipo float para X y entero para y\n",
+    "df2[[\"mmarried\",\"alcohol\",\"monthslb\",\"nprenatal\",\n",
+    "     \"deadkids\",\"prenatal\",\"fbaby\", 'rowid']] = df2[[\"mmarried\",\"alcohol\",\"monthslb\",\n",
+    "                                            \"nprenatal\",\"deadkids\",\"prenatal\",\n",
+    "                                            \"fbaby\", 'rowid']].astype(float)\n",
+    "\n",
+    "df2[\"mbsmoke\"] = df2[\"mbsmoke\"].astype(int)\n",
+    "\n",
+    "# =====================================================\n",
+    "# 2) y y matriz X (primer orden + interacciones)\n",
+    "# =====================================================\n",
+    "y = df2[\"mbsmoke\"]\n",
+    "\n",
+    "X = pd.DataFrame({\n",
+    "    \"mmarried\":  df2[\"mmarried\"],\n",
+    "    \"alcohol\":   df2[\"alcohol\"],\n",
+    "    \"monthslb\":  df2[\"monthslb\"],\n",
+    "    \"nprenatal\": df2[\"nprenatal\"],\n",
+    "    \"deadkids\":  df2[\"deadkids\"],\n",
+    "    \"prenatal\":  df2[\"prenatal\"],\n",
+    "    \"fbaby\":     df2[\"fbaby\"],\n",
+    "})\n",
+    "\n",
+    "# Interacciones de segundo orden (como en Stata)\n",
+    "X[\"mmarried_prenatal\"] = X[\"mmarried\"] * X[\"prenatal\"]\n",
+    "X[\"monthslb_sq\"]       = X[\"monthslb\"] * X[\"monthslb\"]\n",
+    "X[\"fbaby_prenatal\"]    = X[\"fbaby\"] * X[\"prenatal\"]\n",
+    "\n",
+    "# Si hubiera NaNs, los sacamos de y y de X simultáneamente\n",
+    "mask = X.notna().all(axis=1) & y.notna()\n",
+    "X = X[mask].reset_index(drop=True)\n",
+    "y = y[mask].reset_index(drop=True)\n",
+    "df2 = df2[mask].reset_index(drop=True)\n",
+    "\n",
+    "print(\"N obs usadas en el logit:\", len(df2))\n",
+    "\n",
+    "# =====================================================\n",
+    "# 3) Logit\n",
+    "# =====================================================\n",
+    "Xc = sm.add_constant(X, has_constant=\"add\")\n",
+    "logit_mod = sm.Logit(y, Xc)\n",
+    "res = logit_mod.fit(disp=True)\n",
+    "\n",
+    "print(res.summary())\n",
+    "\n",
+    "# McFadden R² (opcional)\n",
+    "llf = res.llf\n",
+    "res_null = sm.Logit(y, np.ones((len(y), 1))).fit(disp=False)\n",
+    "llnull = res_null.llf\n",
+    "mcfadden_r2 = 1 - (llf / llnull)\n",
+    "print(f\"\\nMcFadden R²: {mcfadden_r2:.4f}\")\n",
+    "\n",
+    "# =====================================================\n",
+    "# 4) Propensity score e_x\n",
+    "# =====================================================\n",
+    "df2[\"e_x\"] = res.predict(Xc)\n",
+    "\n",
+    "print(\"\\nPrimeras filas de e_x:\")\n",
+    "print(df2[[\"mbsmoke\", \"e_x\"]].head())\n",
+    "\n",
+    "# =====================================================\n",
+    "# 5) Matching greedy 1:1 sin reemplazo (tipo psmatch2 mbsmoke, pscore(e_x) noreplacement)\n",
+    "# =====================================================\n",
+    "D  = df2[\"mbsmoke\"].to_numpy()\n",
+    "ps = df2[\"e_x\"].to_numpy()\n",
+    "\n",
+    "treated_idx = np.where(D == 1)[0].tolist()\n",
+    "control_idx = np.where(D == 0)[0].tolist()\n",
+    "\n",
+    "print(f\"\\nN tratados: {len(treated_idx)}, N controles: {len(control_idx)}\")\n",
+    "\n",
+    "used_controls = set()\n",
+    "matched_treated = []\n",
+    "matched_controls = []\n",
+    "\n",
+    "for t in treated_idx:\n",
+    "    available = [c for c in control_idx if c not in used_controls]\n",
+    "    if not available:\n",
+    "        break\n",
+    "    dist = np.abs(ps[available] - ps[t])\n",
+    "    j = np.argmin(dist)\n",
+    "    c_match = available[j]\n",
+    "    used_controls.add(c_match)\n",
+    "    matched_treated.append(t)\n",
+    "    matched_controls.append(c_match)\n",
+    "\n",
+    "matched_idx = matched_treated + matched_controls\n",
+    "df_matched = df2.iloc[matched_idx].copy().reset_index(drop=True)\n",
+    "\n",
+    "print(\"\\n=== MUESTRA MATCHEADA ===\")\n",
+    "print(\"N tratados matcheados:\", len(matched_treated))\n",
+    "print(\"N controles matcheados:\", len(matched_controls))\n",
+    "print(\"Shape df_matched:\", df_matched.shape)\n",
+    "\n",
+    "print(\"\\nResumen bweight en muestra matcheada:\")\n",
+    "print(df_matched[\"bweight\"].describe())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7854ac02",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
