--- a/clase_t_8.ipynb
+++ b/clase_t_8.ipynb
@@ -2,10 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "696cf434",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>countyreal</th>\n",
+       "      <th>lpop</th>\n",
+       "      <th>lemp</th>\n",
+       "      <th>first_treat</th>\n",
+       "      <th>treat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2003</td>\n",
+       "      <td>8001</td>\n",
+       "      <td>5.896761</td>\n",
+       "      <td>8.461469</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  countyreal      lpop      lemp  first_treat  treat\n",
+       "0  2003        8001  5.896761  8.461469         2007      1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import pyreadstat as st\n",
@@ -17,19 +70,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ace1f311",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39minfo()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2500 entries, 0 to 2499\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   year         2500 non-null   int64  \n",
+      " 1   countyreal   2500 non-null   int64  \n",
+      " 2   lpop         2500 non-null   float64\n",
+      " 3   lemp         2500 non-null   float64\n",
+      " 4   first_treat  2500 non-null   int64  \n",
+      " 5   treat        2500 non-null   int64  \n",
+      "dtypes: float64(2), int64(4)\n",
+      "memory usage: 117.3 KB\n"
      ]
     }
    ],
