--- a/clase_p_4.ipynb
+++ b/clase_p_4.ipynb
@@ -2,10 +2,82 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "eab874a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>year</th>\n",
+       "      <th>y</th>\n",
+       "      <th>y_bin</th>\n",
+       "      <th>x1</th>\n",
+       "      <th>x2</th>\n",
+       "      <th>x3</th>\n",
+       "      <th>opinion</th>\n",
+       "      <th>op</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>time</th>\n",
+       "      <th>treated</th>\n",
+       "      <th>did</th>\n",
+       "      <th>_diff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>1.342788e+09</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.277904</td>\n",
+       "      <td>-1.107956</td>\n",
+       "      <td>0.282554</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.342788</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   country  year             y  y_bin        x1        x2        x3  opinion  \\\n",
+       "0        1  1990  1.342788e+09    1.0  0.277904 -1.107956  0.282554      1.0   \n",
+       "\n",
+       "    op         Y  time  treated  did  _diff  \n",
+       "0  1.0  1.342788   0.0      0.0  0.0    0.0  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import pyreadstat as st\n",
@@ -18,8 +90,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "03e63539",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 70 entries, 0 to 69\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column   Non-Null Count  Dtype  \n",
+      "---  ------   --------------  -----  \n",
+      " 0   country  70 non-null     int64  \n",
+      " 1   year     70 non-null     int64  \n",
+      " 2   y        70 non-null     float64\n",
+      " 3   y_bin    70 non-null     float64\n",
+      " 4   x1       70 non-null     float64\n",
+      " 5   x2       70 non-null     float64\n",
+      " 6   x3       70 non-null     float64\n",
+      " 7   opinion  70 non-null     float64\n",
+      " 8   op       70 non-null     float64\n",
+      " 9   Y        70 non-null     float64\n",
+      " 10  time     70 non-null     float64\n",
+      " 11  treated  70 non-null     float64\n",
+      " 12  did      70 non-null     float64\n",
+      " 13  _diff    70 non-null     float64\n",
+      "dtypes: float64(12), int64(2)\n",
+      "memory usage: 7.8 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fd529ff7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'country': 'Country',\n",
+       " 'year': 'Year',\n",
+       " 'y': 'Outcome Y',\n",
+       " 'y_bin': 'Binary outcome Y',\n",
+       " 'x1': 'Predictor x1',\n",
+       " 'x2': 'Predictor x2',\n",
+       " 'x3': 'Predictor x3',\n",
+       " 'opinion': 'Categorical variable',\n",
+       " 'op': None,\n",
+       " 'Y': None,\n",
+       " 'time': None,\n",
+       " 'treated': None,\n",
+       " 'did': None,\n",
+       " '_diff': 'Diff-in-diff'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meta.column_names_to_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6de0a6cf",
    "metadata": {},
    "outputs": [],
    "source": []
